kubernetes/apps/network/gateways/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
      alerts:
        - type: pushover
          send-on-resolved: true
          failure-threshold: 3
          success-threshold: 5
spec:
  gatewayClassName: traefik
  addresses:
    - type: IPAddress
      value: 192.168.7.5
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.vaderrp.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vaderrp-com-production-tls
