kubernetes/apps/network/gateways/httproute-traefik-dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: network
  labels:
    route.scope: external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/name: Traefik
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/href: https://traefik.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=traefik
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: http://traefik.network.svc.cluster.local:9000
spec:
  parentRefs:
    - name: gateway-public
  hostnames:
    - "traefik.vaderrp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: traefik
          port: 9000
